--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +9,15 @@
 </head>
 <body>
     <header>
-        <img src="./img/logo.png">
+        <img src="./img/logo.png" alt="Logo Principal de Aprende YUGIOH!">
         <nav>
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
-                <img class="menuicn" src="./img/Hamburger_icon.svg">
+                <img class="menuicn" src="./img/Hamburger_icon.svg" alt="Ícono Hamburguesa">
             </label>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Anime</a></li>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./anime.html">Anime</a></li>
                 <li><a href="#">Cartas</a></li>
                 <li><a href="#">Juegos</a></li>
             </ul>
@@ -37,15 +37,15 @@
                 <p>Aprende Yu-Gi-Oh! es un proyecto realizado por un fan de la franquicia, el cual tiene el propósito no solo de enseñar lo básico acerca del juego de cartas intercambiables (Trading Card Game o TCG) de Yu-Gi-Oh! sino que también de promocionarlo con aquel público que tal vez nunca le dió una oportunidad, o aquellos que deseen introducirse en este mundo. No solo se hablará del TCG sino que también de los otros aspectos de la franquicia de Yu-Gi-Oh!</p>
             </article>
             <h2>Navegación</h2>
-            <img src="img/navmenu/(1) Anime.png" alt="Anime">
-            <img src="img/navmenu/(2) TCG.png" alt="Trading Card Game (TCG)">
-            <img src="img/navmenu/(3) Juegos.png" alt=" Juegos">
-            <img src="img/navmenu/(4) Peliculas.png" alt="Peliculas">
-            <img src="img/navmenu/(5) h2play.png" alt="Cómo Jugar">
-            <img src="img/navmenu/(6) duellinks.png" alt="Duel Links">
-            <img src="img/navmenu/(7) Personajes.png" alt="Personajes">
-            <img src="img/navmenu/(8) Monstruos.png" alt="Monstruos">
-            <img src="img/navmenu/(9) Comunidad.png" alt="Comunidad Yu-Gi-Oh">
+            <img src="img/navmenu/(1)Anime.png" alt="Anime">
+            <img src="img/navmenu/(2)TCG.png" alt="Trading Card Game (TCG)">
+            <img src="img/navmenu/(3)Juegos.png" alt=" Juegos">
+            <img src="img/navmenu/(4)Peliculas.png" alt="Peliculas">
+            <img src="img/navmenu/(5)h2play.png" alt="Cómo Jugar">
+            <img src="img/navmenu/(6)duellinks.png" alt="Duel Links">
+            <img src="img/navmenu/(7)Personajes.png" alt="Personajes">
+            <img src="img/navmenu/(8)Monstruos.png" alt="Monstruos">
+            <img src="img/navmenu/(9)Comunidad.png" alt="Comunidad Yu-Gi-Oh">
         </div>    
     </main>
     <footer>
