Agregué 2 HTML con el contenido necesario

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./anime.html">Anime</a></li>
-                <li><a href="#">Cartas</a></li>
-                <li><a href="#">Juegos</a></li>
+                <li><a href="./cartas.html">Cartas</a></li>
+                <li><a href="./juegos.html">Juegos</a></li>
             </ul>
         </nav>
     </header>
@@ -32,20 +32,37 @@
                 Comenzó como un manga en Japón en 1996. La franquicia de Yu-Gi-Oh! ha tenido un inmenso éxito a nivel global, originando varias series de anime. En la vida real se lanzaron las cartas del anime y existen videojuegos, juguetes y muchos otros productos.
                 El universo de Yu-Gi-Oh! se compone del juego de cartas intercambiables, series de manga y anime, películas y numerosos videojuegos, entre otros.</p>
             </article>
+            <hr>
             <article>
                 <h2>¿Qué es Aprende YuGiOh?</h2>
-                <p>Aprende Yu-Gi-Oh! es un proyecto realizado por un fan de la franquicia, el cual tiene el propósito no solo de enseñar lo básico acerca del juego de cartas intercambiables (Trading Card Game o TCG) de Yu-Gi-Oh! sino que también de promocionarlo con aquel público que tal vez nunca le dió una oportunidad, o aquellos que deseen introducirse en este mundo. No solo se hablará del TCG sino que también de los otros aspectos de la franquicia de Yu-Gi-Oh!</p>
+                <p>Aprende Yu-Gi-Oh! es un proyecto realizado sin fines de lucro, el cual tiene el propósito no solo de enseñar lo básico acerca del juego de cartas intercambiables (Trading Card Game o TCG) de Yu-Gi-Oh! sino que también de promocionarlo con aquel público que tal vez nunca le dió una oportunidad, o aquellos que deseen introducirse en este mundo. No solo se hablará del TCG sino que también de los otros aspectos de la franquicia de Yu-Gi-Oh!</p>
             </article>
+            <hr>
             <h2>Navegación</h2>
-            <img src="img/navmenu/(1)Anime.png" alt="Anime">
-            <img src="img/navmenu/(2)TCG.png" alt="Trading Card Game (TCG)">
-            <img src="img/navmenu/(3)Juegos.png" alt=" Juegos">
-            <img src="img/navmenu/(4)Peliculas.png" alt="Peliculas">
-            <img src="img/navmenu/(5)h2play.png" alt="Cómo Jugar">
-            <img src="img/navmenu/(6)duellinks.png" alt="Duel Links">
-            <img src="img/navmenu/(7)Personajes.png" alt="Personajes">
-            <img src="img/navmenu/(8)Monstruos.png" alt="Monstruos">
-            <img src="img/navmenu/(9)Comunidad.png" alt="Comunidad Yu-Gi-Oh">
+            <!--LA IDEA ACÁ ES HACER UNA GRILLA QUE PUEDA achicarse dependiendo de la resolución del dispositivo, adaptándose a este. -->
+            <div class="img-nav">
+                <div class="nav-box">
+                    <a href="anime.html">
+                        <figure>
+                            <img src="img/navmenu/(1)Anime.png" alt="Anime">
+                        </figure>
+                    </a>
+                </div>
+                <div class="nav-box">
+                    <a href="cartas.html">
+                        <figure>
+                            <img src="img/navmenu/(2)TCG.png" alt="Trading Card Game (TCG)">
+                        </figure>
+                    </a>
+                </div>
+                <div class="nav-box">
+                    <a href="juegos.html">
+                        <figure>
+                            <img src="img/navmenu/(3)Juegos.png" alt="Juegos de Yu-Gi-Oh">
+                        </figure>
+                    </a>
+                </div>
+            </div>
         </div>    
     </main>
     <footer>
