Hice un HTML más y actualicé todos los otros

--- a/cartas.html
+++ b/cartas.html
@@ -23,29 +23,28 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="container">
         <!-- Acá la idea es que las imagenes queden al lado del texto, tengo que investigar como hacer eso-->
-        <div class="container">
-            <section id="cartas-intro"></section>
-                <h1>
-                    El Trading Card Game de YuGiOh
-                </h1>
-                <p>Yu-Gi-Oh! Juego de Cartas Coleccionables (también conocido con su nombre en inglés como Yu-Gi-Oh! Trading Card Game y usualmente con la abreviatura TCG, adaptada al español como JCC) es el juego de cartas basado en el fenómeno manga y anime de Yu-Gi-Oh!, siendo este producido por Konami como su dueño actual. Acorde con el "Libro de los Récord Guinness" es el juego de cartas más vendido de todos los tiempos, sobrepasando las 22.000 millones de cartas vendidas desde agosto del 2009. Posiblemente el aspecto más lucrativo de esta franquicia, el TCG es jugado en todo el mundo, pero mayormente en Norte América, Europa y Australia.
-                </p>
-                <img src="#" alt="LOGO DEL TCG DE YUGIOH">
-            </section>
-            <section>
-            <h2>¿En qué consiste?</h2>
-            <p>En este juego, dos o más personas (llamadas Duelistas) se enfrentan en un Duelo de Monstruos. En este cada jugador cuenta con un determinado número de cartas de tres diferentes clases: Cartas de Monstruo, Cartas Mágicas y Cartas de Trampa. Cada una tiene características y efectos diferentes (algunas pocas no tienen efecto y se permite un máximo de tres copias de una misma carta por jugador) que se usan durante el Duelo con el fin de defenderse y derrotar a su adversario. Cada jugador cuenta con 8000 LP (Life Points o Puntos de Vida) y quien queda con 0 LP, o se queda sin cartas, pierde el Duelo.</p>
-            </section>
-            <section>
+        <article id="cartas-intro">
+            <h1>
+            El Trading Card Game de YuGiOh
+            </h1>
+            <p>Yu-Gi-Oh! Juego de Cartas Coleccionables (también conocido con su nombre en inglés como Yu-Gi-Oh! Trading Card Game y usualmente con la abreviatura TCG, adaptada al español como JCC) es el juego de cartas basado en el fenómeno manga y anime de Yu-Gi-Oh!, siendo este producido por Konami como su dueño actual. Acorde con el "Libro de los Récord Guinness" es el juego de cartas más vendido de todos los tiempos, sobrepasando las 22.000 millones de cartas vendidas desde agosto del 2009. Posiblemente el aspecto más lucrativo de esta franquicia, el TCG es jugado en todo el mundo, pero mayormente en Norte América, Europa y Australia.
+            </p>
+            <img src="img/TCG-LOGO.png" alt="LOGO DEL TCG DE YUGIOH">
+        </article>
+        <article>
+        <h2>¿En qué consiste?</h2>
+        <p>En este juego, dos o más personas (llamadas Duelistas) se enfrentan en un Duelo de Monstruos. En este cada jugador cuenta con un determinado número de cartas de tres diferentes clases: Cartas de Monstruo, Cartas Mágicas y Cartas de Trampa. Cada una tiene características y efectos diferentes (algunas pocas no tienen efecto y se permite un máximo de tres copias de una misma carta por jugador) que se usan durante el Duelo con el fin de defenderse y derrotar a su adversario. Cada jugador cuenta con 8000 LP (Life Points o Puntos de Vida) y quien queda con 0 LP, o se queda sin cartas, pierde el Duelo.</p>
+        </article>
+        <article>
             <h2>Aspectos Básicos</h2>
-                <h3>Deck/Mazo</h3>
+            <h3>Deck/Mazo</h3>
                 <p>En el Deck (también conocido como "baraja" en lanzamientos del JCC y "mazo" en videojuegos) se almacenan cierto numero de cartas desde un mínimo de 40 cartas hasta un máximo de 60. Es parte esencial del juego de cartas, ya que este contiene todas las Cartas Mágicas, Cartas de Trampa y la gran mayoría de Cartas de Monstruo exceptuando los Monstruos de Fusión, Monstruos de Sincronía y Monstruos XYZ (cartas que en cambio se sitúan en el Deck Extra).</p>
-                <h3>Cartas</h3>
+            <h3>Cartas</h3>
                 <p>Una carta constituye un elemento fundamental para el juego de cartas. Representa un monstruo, Mágica o Trampa con los cuales se lleva a cabo un Duelo. Un Deck normal debe incluir entre 40 a 60 cartas, y sólo puede tenerse tres copias de la misma carta. La cantidad de cartas no siempre es un factor determinante para ganar un Duelo, es decir, un Deck con 60 cartas no asegura la victoria contra Decks con menos cartas.</p>
                 <p>Algunas cartas tienen restricción, lo que limita la cantidad de cartas iguales que un jugador puede poseer: dos, una o ninguna (prohibidas e ilegales). La lista cambia periódicamente.</p>
-                <h3>Tipos de Cartas</h3>
+            <h3>Tipos de Cartas</h3>
                 <ul id="tipos">
                     <li>Cartas de Monstruo: Suelen ser de color naranja. Representan a los monstruos que un jugador puede Invocar y hacer batallar contra otros o directamente contra su adversario, cada carta de monstruo cuenta con una estadística de ATK (ataque) y DEF (defensa) que determina si ganará o no un enfrentamiento contra un monstruo rival</li>
                     <li>Cartas de Magia: Son de color verde y pueden tener varios efectos que alteran un Duelo. Suelen tener efectos que benefician al controlador de la carta, o perjudican al adversario. Puedes usar tantas Cartas Mágicas como quieras por turno. En un Deck común, las cartas mágicas ocupan una parte muy pequeña del total, menos de la mitad (entre 12 y 15 cartas). En conjunto con las Cartas de Trampa suelen formar la mitad del Deck Principal.</li>
@@ -56,20 +55,19 @@
                             <li>de Contraefecto</li>
                         </ul>
                 </ul>
-            </section>
-            <section>
-                <h2>¿Cómo Jugar Yu-Gi-Oh?</h2>
-                <p>En un juego tan complejo y tan antiguo ( aproximadamente 22 años) como lo es el TCG de Yu-Gi-Oh!, aprender a jugar puede parecer difícil. Pero Konami nos ha facilitado la tarea con sitios web orientados a princpiantes, como el sitio oficial de <a href="https://www.yugioh-card.com/lat-am/forbeginners/">YuGiOh para principiantes</a> y entregándonos un libro de reglas bastante competente y completo. Si quieres leer el reglamento haz click <a href="https://www.yugioh-card.com/lat-am/rulebook/">aquí</a> o en la imagen de la derecha.</p>
-                <h3>Sobre el Reglamento</h3>
-                <p>El reglamento de juego de cartas Yu-Gi-Oh! consiste básicamente en una serie de reglas que se deben seguir durante el juego contra uno o más adversarios, y la estructura y creación de un Deck de cartas para jugar.</p>
-                <p>Las Reglas Básicas del Reglamento rigen el juego y se cumplen siempre y cuando el efecto de una Carta Mágica, Monstruo de efecto o Carta de trampa no diga lo contrario.
+        </article>
+        <article id="reglamento">
+            <h2>¿Cómo Jugar Yu-Gi-Oh?</h2>
+            <p>En un juego tan complejo y tan antiguo (aproximadamente 22 años) como lo es el TCG de Yu-Gi-Oh!, aprender a jugar puede parecer difícil. Pero Konami nos ha facilitado la tarea con sitios web orientados a princpiantes, como el sitio oficial de <a href="https://www.yugioh-card.com/lat-am/forbeginners/">YuGiOh para principiantes</a> y entregándonos un libro de reglas bastante competente y completo. Si quieres leer el reglamento haz click <a href="https://www.yugioh-card.com/lat-am/rulebook/">aquí</a> o en la imagen de la derecha.</p>
+            <h3>Sobre el Reglamento</h3>
+            <p>El reglamento de juego de cartas Yu-Gi-Oh! son una serie de reglas que se deben seguir durante el juego contra uno o más adversarios, y la estructura y creación de un Deck de cartas para jugar.</p>
+            <p>Las Reglas Básicas del Reglamento rigen el juego y se cumplen siempre y cuando el efecto de una Carta Mágica, Monstruo de efecto o Carta de trampa no diga lo contrario.
                 En el caso de que el efecto de una carta entre en conflicto con alguna regla, el propio Reglamento dicta que el efecto de la carta tiene prioridad. El Yu-Gi-Oh! Trading Card Game es un juego muy dinámico y gran parte de su éxito se debe a esa cualidad, en la que existen efectos para "romper" sus propias reglas en beneficio del jugador.</p>
-                <img src="#" alt="Carátula del Reglamento de Yugioh">
-            </section>
-        </div>    
+            <img src="img/CARTAS/page_1.jpg" alt="Carátula del Reglamento de Yugioh">
+        </article>   
     </main>
     <footer>
-        <p>DANTE CARDOSO INC. TODOS LOS DERECHOS RESERVADOS</p>
+        <p>footer de ejemplo</p>
     </footer>
 </body>
 </html>
