--- a/anime.html
+++ b/anime.html
@@ -25,70 +25,70 @@
     </header>
     <main>
         <!--TENGO QUE ACTUALIZAR LAS IMÁGENES, no se enfoquen en eso.-->
-        <div class="container">
+        <section class="container">
             <h1>Los Anime de YuGiOh!</h1>
             <p>A lo largo de los años se realizaron diversas series del universo Yu-Gi-Oh, centradas en un juego de cartas muy peculiar, el <strong>Duelo de Monstruos</strong>. A través de estas series seguimos las aventuras de diversos <strong>duelistas</strong> y observamos sus partidas. Cada serie implica un "salto generacional", una nueva mecánica en el juego de cartas, actualización de reglas de juego, etcétera. Acompañame a ver la diversa variedad de series de esta franquicia:</p>
             <hr>
-            <section id="TOEI">
+            <article id="TOEI">
                 <h2>Yu-Gi-Oh! Toei</h2>
-                <img src="./img/ANIME/Yugioh1st.jpg" alt="Poster de YUGIOH por Toei Animation">
+                <img src="img/ANIME/1-S0.jpg" alt="Poster de YUGIOH por Toei Animation">
                 <p>También conocida como "La Temporada Cero", Yu-Gi-Oh! es el título de la primera serie del anime basada en el manga Yu-Gi-Oh! emitida por TV Asahi. Esta serie anime está basada en los primeros siete tomos del manga original creado por Kazuki Takahashi en 1996, publicado por primera vez en la revista Shōnen Jump. Sin llegar a tener mucha trascendencia, finalizó después de la primera y única temporada de 27 episodios.</p>
                 <p>
                 Esta serie se caracteriza por un tono más oscuro, acorde a los sucesos que ocurren en los primeros tomos del manga, donde la serie no se centraba en Duelo de Monstruos, sino en diversos juegos creados por el Faraón, un espíritu que reside en el cuerpo de Yugi Muto, nuestro protagonista, tras completar un antiguo rompecabezas.
                 </p>
-            </section>
+            </article>
             <hr>
-            <section id="DM">
+            <article id="DM">
                 <h2>Yu-Gi-Oh! Duel Monsters</h2>
-                <img src="./img/ANIME/Imagen_portada_Yu-Gi-Oh!.jpg" alt="Imagen promocional de Yugioh Duel Monsters">
+                <img src="img/ANIME/2-DM.jpg" alt="Imagen promocional de Yugioh Duel Monsters">
                 <p>Posiblemente la más popular de todas, Yu-Gi-Oh! Duelo de Monstruos es el título de la primera serie del anime basada en el manga Yu-Gi-Oh! realizada por Nihon Ad Systems (NAS). Fue nombrada de esta manera para diferenciarla de la anterior serie y por enfocarse en los nuevos arcos argumentales donde el juego Duelo de Monstruos formaba parte central del argumento. La serie fue conocida internacionalmente simplemente como Yu-Gi-Oh!.</p>
                 <p>Comparte elenco con la serie anterior, Yugi y el Faraón ocupando el lugar de protagonistas. Esta vez, dedicados completamente al Duelo de Monstruos, se dedican a averiguar de dónde viene el Faraón, y su verdadero nombre.</p>
-            </section>
+            </article>
             <hr>
-            <section id="GX">
+            <article id="GX">
                 <h2>Yu-Gi-Oh! GX</h2>
-                <img src="#" alt="Imagen referencial de Yugioh GX">
+                <img src="img/ANIME/3-GX.png" alt="Imagen referencial de Yugioh GX">
                 <p>Yu-Gi-Oh! GX, llamada originalmente en Japón como Yu-Gi-Oh! Duelo de Monstruos GX (Yu-Gi-Oh! Duel Monsters GX) es la serie anime sucesor de la franquicia de Yu-Gi-Oh! original. Producida por NAS, Yu-Gi-Oh! GX empezó a emitirse en TV Tokyo en Japón el día 6 de octubre de 2004. Al igual que la serie anime anterior, fue licenciada por 4Kids Entertainment para su distribución en occidente. Aunque nunca se emitió su última temporada fuera de Japón.</p>
                 <p>Esta serie sigue a Jaden Yuki, un chico entusiasta que busca convertirse en el próximo <em>Rey de los Duelos</em>, título que le pertenece al protagonista de la serie anterior, Yugi Muto. Para esto, asiste a la nueva Escuela de Duelos creada por Seto Kaiba, rival de Yugi.</p>
-            </section>
+            </article>
             <hr>
-            <section id="5Ds">
+            <article id="5Ds">
                 <h2>Yu-Gi-Oh! 5Ds</h2>
-                <img src="./img/ANIME/Imagen_portada_Yu-Gi-Oh!_5D's.jpg" alt="Imagen promocional de Yugioh 5DS">
+                <img src="img/ANIME/4-5Ds.jpg" alt="Imagen promocional de Yugioh 5DS">
                 <p>Yu-Gi-Oh! 5D's es la tercera entrega del anime Yu-Gi-Oh! Comenzó a emitirse en Japón el día 2 de abril de 2008 y finalizó el día 3 de marzo de 2011 en el canal TV Tokyo, como sucesora de Yu-Gi-Oh! GX y predecesora de Yu-Gi-Oh! ZEXAL, introduciendo la Invocación de Sincronía, la mecánica de los Monstruos de Sincronía y los monstruos Cantantes.
                 </p>
                 <p>Yu-Gi-Oh! 5D's se desarrolla en la Ciudad de Nueva Domino algún tiempo después de los hechos relativos a Yugi Muto y Jaden Yuki. Una nueva forma de Duelo, los Turbo Duelos, (Riding Duels) tiene lugar en motocicletas llamadas Duel Runners.</p>
-            </section>
+            </article>
             <hr>
-            <section id="ZEXAL">
+            <article id="ZEXAL">
                 <h2>Yu-Gi-Oh! ZEXAL</h2>
-                <img src="/img/ANIME/Imagen_portada_Yu-Gi-Oh!_ZEXAL.jpg" alt="Imagen Promocional de Yugioh ZEXAL">
+                <img src="img/ANIME/5-ZEXAL.png" alt="Imagen Promocional de Yugioh ZEXAL">
                 <p>Yu-Gi-Oh! ZEXAL fue la cuarta entrega del anime Yu-Gi-Oh!. Comenzó a emitirse en Japón el día 11 de abril del 2011 y finalizó el día 23 de marzo del 2014 en el canal TV Tokyo, como sucesora de Yu-Gi-Oh! 5D's y predecesora de Yu-Gi-Oh! ARC-V, introduciendo la Invocación XYZ y la mecánica de los Monstruos XYZ.</p>
                 <p>En esta serie seguimos las aventuras de Yuma desde que Astral, una misteriosa entidad aparece frente a él y lo acompaña en sus duelos. Yuma y Astral se alían para buscar los monstruos Número, que son fragmentos de la memoria de este.</p>
-            </section>
+            </article>
             <hr>
-            <section id="ARC-V">
+            <article id="ARC-V">
                 <h2>Yu-Gi-Oh! ARC-V</h2>
-                <img src="/img/ANIME/71Z4omIMY7L._AC_SY606_.jpg" alt="Poster de Yugioh ARC-V">
+                <img src="img/ANIME/6-ARCV.jpg" alt="Poster de Yugioh ARC-V">
                 <p>Yu-Gi-Oh! ARC-V (pronunciado "arc five" en japonés) es la quinta entrega del anime Yu-Gi-Oh!, sucesora de Yu-Gi-Oh! ZEXAL. Comenzó a emitirse en Japón el día 6 de abril del 2014 y finalizó el día 26 de marzo de 2017 en el canal TV Tokyo.</p>
                 <p>Esta nueva serie introduce a los Monstruos de Péndulo y hace estreno de las nuevas reglas de Duelo, como que el primer jugador no podrá robar en su primer turno. Esta nueva entrega se caracteriza por reunir por primera vez todos los tipos de Invocación en una misma serie</p>
-            </section>
+            </article>
             <hr>
-            <section id="VRAINS">
+            <article id="VRAINS">
                 <h2>Yu-Gi-Oh! VRAINS</h2>
-                <img src="./img/ANIME/Póster_VRAINS.jpg" alt="Poster de Yugioh VRAINS">
+                <img src="img/ANIME/7-VRAINS.jpg" alt="Poster de Yugioh VRAINS">
                 <p>Yu-Gi-Oh! VRAINS es la sexta entrega del anime Yu-Gi-Oh!, sucesora de Yu-Gi-Oh! ARC-V. Comenzó a emitirse en Japón el día 10 de mayo de 2017 y finalizó el día 25 de septiembre de 2019 en el canal TV Tokyo. Introduce un nuevo tipo de monstruo llamado Ciberso, acompañado con un tipo de Invocación llamada Invocación por Enlace y la mecánica de otro tipo de monstruo que pertenece en el Deck Extra, los Monstruos de Enlace (Link).</p>
-            </section>
+            </article>
             <hr>
-            <section id="SEVENS">
+            <article id="SEVENS">
                 <h2>Yu-Gi-Oh! SEVENS</h2>
-                <img src="./img/ANIME/Yu-Gi-Oh_SEVENS.jpg" alt="Poster de Yugioh SEVENS">
+                <img src="img/ANIME/8-SEVENS.jpg" alt="Poster de Yugioh SEVENS">
                 <p>Yu-Gi-Oh! SEVENS es la séptima entrega del anime Yu-Gi-Oh!, sucesora de Yu-Gi-Oh! VRAINS. Comenzó a emitirse en Japón el 4 abril de 2020 en el canal TV Tokyo. A diferencia de sus predescesoras, animadas por Studio Gallop, el estudio que está a cargo de su animación es Bridge. Además, no introduce un método de Invocación o un tipo de monstruo, sino un tipo de Duelo, “Rush Duel”.</p>
-            </section>
-        </div> 
+            </article>
+        </section> 
     </main>
     <footer>
-        <p>DANTE CARDOSO INC. TODOS LOS DERECHOS RESERVADOS</p>
+        <p>footer de ejemplo</p>
     </footer>
 </body>
 </html>
