--- a/index.html
+++ b/index.html
@@ -26,47 +26,60 @@
     <main>
         <div class="container">
             <h1>¡Bienvenido a Aprende YuGiOh!</h1>
-            <article>
-                <h2>¿Qué es YuGiOh?</h2>
-                <p>Yu-Gi-Oh! (遊☆戯☆王 Yūgiō, traducido del japonés "Rey de los Juegos") es una popular franquicia de manga y anime japonés creada por Kazuki Takahashi que involucra principalmente a personajes que juegan un juego de cartas llamado Duelo de Monstruos (Duel Monsters) donde cada jugador armaba un Deck (baraja) de Cartas de Monstruos, Cartas Mágicas y Cartas de Trampas para derrotar a su adversario.
-                Comenzó como un manga en Japón en 1996. La franquicia de Yu-Gi-Oh! ha tenido un inmenso éxito a nivel global, originando varias series de anime. En la vida real se lanzaron las cartas del anime y existen videojuegos, juguetes y muchos otros productos.
-                El universo de Yu-Gi-Oh! se compone del juego de cartas intercambiables, series de manga y anime, películas y numerosos videojuegos, entre otros.</p>
-            </article>
+            <section>
+                <article>
+                    <h2>¿Qué es YuGiOh?</h2>
+                    <p>Yu-Gi-Oh! (遊☆戯☆王 Yūgiō, traducido del japonés "Rey de los Juegos") es una popular franquicia de manga y anime japonés creada por Kazuki Takahashi que involucra principalmente a personajes que juegan un juego de cartas llamado Duelo de Monstruos (Duel Monsters) donde cada jugador armaba un Deck (baraja) de Cartas de Monstruos, Cartas Mágicas y Cartas de Trampas para derrotar a su adversario.
+                    Comenzó como un manga en Japón en 1996. La franquicia de Yu-Gi-Oh! ha tenido un inmenso éxito a nivel global, originando varias series de anime. En la vida real se lanzaron las cartas del anime y existen videojuegos, juguetes y muchos otros productos.
+                    El universo de Yu-Gi-Oh! se compone del juego de cartas intercambiables, series de manga y anime, películas y numerosos videojuegos, entre otros.</p>
+                </article>
+                <img src="img/Logo_Yu-Gi-Oh.png" alt="Logo Oficial de Yu-Gi-Oh"> 
+                <hr>
+                <article>
+                    <h2>¿Qué es Aprende YuGiOh?</h2>
+                    <p>Aprende Yu-Gi-Oh! es un proyecto realizado sin fines de lucro, el cual tiene el propósito no solo de enseñar lo básico acerca del juego de cartas intercambiables (Trading Card Game o TCG) de Yu-Gi-Oh! sino que también de promocionarlo con aquel público que tal vez nunca le dió una oportunidad, o aquellos que deseen introducirse en este mundo. No solo se hablará del TCG sino que también de los otros aspectos de la franquicia de Yu-Gi-Oh!</p>
+                    <img src="img/logo.png" alt="Logo de Aprende Yu-Gi-Oh por Dante Cardoso">
+                </article>
+            </section>
             <hr>
             <article>
-                <h2>¿Qué es Aprende YuGiOh?</h2>
-                <p>Aprende Yu-Gi-Oh! es un proyecto realizado sin fines de lucro, el cual tiene el propósito no solo de enseñar lo básico acerca del juego de cartas intercambiables (Trading Card Game o TCG) de Yu-Gi-Oh! sino que también de promocionarlo con aquel público que tal vez nunca le dió una oportunidad, o aquellos que deseen introducirse en este mundo. No solo se hablará del TCG sino que también de los otros aspectos de la franquicia de Yu-Gi-Oh!</p>
+                <h2>En Memoria de Kazuki Takahashi</h2>
+                <p>Lamentablemente, el día 6 de julio de 2022 se encontró su cuerpo sin vida en la costa de Nago, Okinawa. No se sabe muy bien que pasó, pero según un informe del Departamento de Defensa de los Estados Unidos, un par de miembros del ejército avistaron a unos bañistas en apuros, por lo que se decidieron a acudir al rescate. Sin embargo, alguien más estaba actuando en ese momento, pues Takahashi también saltó al rescate. Desafortunadamente, se especula que la corriente lo arrastró y le impidió salir del agua. Si te interesa leer la nota completa te dejo un link <a href="https://www.clarin.com/internacional/nina-peligro-rescate-fallido-misteriosa-muerte-creador-cartas-yu-gi-oh-_0_6U0s3gadSA.html">acá</a></p>
+                <p>Un acto heroíco que le costó su vida, a cambio de ayudar a otros. Es una pena cuando alguien que te dió tanto se va de este mundo. Lo más seguro es que nunca se haya dado cuenta del impacto que tuvo en miles sino es que millones de vidas. Un héroe, no solo por lo que hizo antes de morir, sino también por su obra.</p>
+                <img src="img/Kazuki_takahashi.jpg" alt="Kazuki Takahashi en 2005.">
             </article>
             <hr>
-            <h2>Navegación</h2>
-            <!--LA IDEA ACÁ ES HACER UNA GRILLA QUE PUEDA achicarse dependiendo de la resolución del dispositivo, adaptándose a este. -->
-            <div class="img-nav">
-                <div class="nav-box">
-                    <a href="anime.html">
-                        <figure>
-                            <img src="img/navmenu/(1)Anime.png" alt="Anime">
-                        </figure>
-                    </a>
+            <section>
+                <h2>Navegación</h2>
+                <!--LA IDEA ACÁ ES HACER UNA GRILLA QUE PUEDA achicarse dependiendo de la resolución del dispositivo, adaptándose a este. -->
+                <div class="img-nav">
+                    <div class="nav-box">
+                        <a href="anime.html">
+                            <figure>
+                                <img src="img/navmenu/(1)Anime.png" alt="Anime">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="nav-box">
+                        <a href="cartas.html">
+                            <figure>
+                                <img src="img/navmenu/(2)TCG.png" alt="Trading Card Game (TCG)">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="nav-box">
+                        <a href="juegos.html">
+                            <figure>
+                                <img src="img/navmenu/(3)Juegos.png" alt="Juegos de Yu-Gi-Oh">
+                            </figure>
+                        </a>
+                    </div>
                 </div>
-                <div class="nav-box">
-                    <a href="cartas.html">
-                        <figure>
-                            <img src="img/navmenu/(2)TCG.png" alt="Trading Card Game (TCG)">
-                        </figure>
-                    </a>
-                </div>
-                <div class="nav-box">
-                    <a href="juegos.html">
-                        <figure>
-                            <img src="img/navmenu/(3)Juegos.png" alt="Juegos de Yu-Gi-Oh">
-                        </figure>
-                    </a>
-                </div>
-            </div>
+            </section>
         </div>    
     </main>
     <footer>
-        <p>DANTE CARDOSO INC. TODOS LOS DERECHOS RESERVADOS</p>
+        <p>footer de ejemplo</p>
     </footer>
 </body>
 </html>
