Actualicé styles.css para imagenes responsive

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <main>
         <div class="container">
             <h1>¡Bienvenido a Aprende YuGiOh!</h1>
-            <section>
+            <section id="intro">
                 <article>
                     <h2>¿Qué es YuGiOh?</h2>
                     <p>Yu-Gi-Oh! (遊☆戯☆王 Yūgiō, traducido del japonés "Rey de los Juegos") es una popular franquicia de manga y anime japonés creada por Kazuki Takahashi que involucra principalmente a personajes que juegan un juego de cartas llamado Duelo de Monstruos (Duel Monsters) donde cada jugador armaba un Deck (baraja) de Cartas de Monstruos, Cartas Mágicas y Cartas de Trampas para derrotar a su adversario.
                     Comenzó como un manga en Japón en 1996. La franquicia de Yu-Gi-Oh! ha tenido un inmenso éxito a nivel global, originando varias series de anime. En la vida real se lanzaron las cartas del anime y existen videojuegos, juguetes y muchos otros productos.
                     El universo de Yu-Gi-Oh! se compone del juego de cartas intercambiables, series de manga y anime, películas y numerosos videojuegos, entre otros.</p>
+                    <img src="img/Logo_Yu-Gi-Oh.png" alt="Logo Oficial de Yu-Gi-Oh"> 
                 </article>
-                <img src="img/Logo_Yu-Gi-Oh.png" alt="Logo Oficial de Yu-Gi-Oh"> 
                 <hr>
                 <article>
                     <h2>¿Qué es Aprende YuGiOh?</h2>
@@ -46,7 +46,7 @@
                 <h2>En Memoria de Kazuki Takahashi</h2>
                 <p>Lamentablemente, el día 6 de julio de 2022 se encontró su cuerpo sin vida en la costa de Nago, Okinawa. No se sabe muy bien que pasó, pero según un informe del Departamento de Defensa de los Estados Unidos, un par de miembros del ejército avistaron a unos bañistas en apuros, por lo que se decidieron a acudir al rescate. Sin embargo, alguien más estaba actuando en ese momento, pues Takahashi también saltó al rescate. Desafortunadamente, se especula que la corriente lo arrastró y le impidió salir del agua. Si te interesa leer la nota completa te dejo un link <a href="https://www.clarin.com/internacional/nina-peligro-rescate-fallido-misteriosa-muerte-creador-cartas-yu-gi-oh-_0_6U0s3gadSA.html">acá</a></p>
                 <p>Un acto heroíco que le costó su vida, a cambio de ayudar a otros. Es una pena cuando alguien que te dió tanto se va de este mundo. Lo más seguro es que nunca se haya dado cuenta del impacto que tuvo en miles sino es que millones de vidas. Un héroe, no solo por lo que hizo antes de morir, sino también por su obra.</p>
-                <img src="img/Kazuki_takahashi.jpg" alt="Kazuki Takahashi en 2005.">
+                <img id="kazuki" src="img/Kazuki_takahashi.jpg" alt="Kazuki Takahashi en 2005.">
             </article>
             <hr>
             <section>
@@ -55,23 +55,17 @@
                 <div class="img-nav">
                     <div class="nav-box">
                         <a href="anime.html">
-                            <figure>
-                                <img src="img/navmenu/(1)Anime.png" alt="Anime">
-                            </figure>
+                            <img src="img/navmenu/(1)Anime.png" alt="Anime">
                         </a>
                     </div>
                     <div class="nav-box">
                         <a href="cartas.html">
-                            <figure>
-                                <img src="img/navmenu/(2)TCG.png" alt="Trading Card Game (TCG)">
-                            </figure>
+                            <img src="img/navmenu/(2)TCG.png" alt="Trading Card Game (TCG)">
                         </a>
                     </div>
                     <div class="nav-box">
                         <a href="juegos.html">
-                            <figure>
-                                <img src="img/navmenu/(3)Juegos.png" alt="Juegos de Yu-Gi-Oh">
-                            </figure>
+                            <img src="img/navmenu/(3)Juegos.png" alt="Juegos de Yu-Gi-Oh">
                         </a>
                     </div>
                 </div>
