Cambios al CSS y maquetación Agregué colores, creé las clases c-i y c-a, c-b estructuré el css con comentarios para facil navegación, y también comencé el maquetado con flexbox.

--- a/pages/cartas.html
+++ b/pages/cartas.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprende YuGiOh!</title>
-    <link href="styles.css" rel="stylesheet">
-    <link rel="icon" href="./img/ico.png">
+    <link href="../styles.css" rel="stylesheet">
+    <link rel="icon" href="../img/ico.png">
 </head>
 <body>
     <header>
-        <img src="./img/logo.png" alt="Logo Principal de Aprende YUGIOH!">
+        <img src="../img/logo.png" alt="Logo Principal de Aprende YUGIOH!">
         <nav>
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
-                <img class="menuicn" src="./img/Hamburger_icon.svg" alt="Ícono Hamburguesa">
+                <img class="menuicn" src="../img/Hamburger_icon.svg" alt="Ícono Hamburguesa">
             </label>
             <ul>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./anime.html">Anime</a></li>
-                <li><a href="./cartas.html">Cartas</a></li>
-                <li><a href="./juegos.html">Juegos</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="anime.html">Anime</a></li>
+                <li><a href="cartas.html">Cartas</a></li>
+                <li><a href="juegos.html">Juegos</a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +31,7 @@
             </h1>
             <p>Yu-Gi-Oh! Juego de Cartas Coleccionables (también conocido con su nombre en inglés como Yu-Gi-Oh! Trading Card Game y usualmente con la abreviatura TCG, adaptada al español como JCC) es el juego de cartas basado en el fenómeno manga y anime de Yu-Gi-Oh!, siendo este producido por Konami como su dueño actual. Acorde con el "Libro de los Récord Guinness" es el juego de cartas más vendido de todos los tiempos, sobrepasando las 22.000 millones de cartas vendidas desde agosto del 2009. Posiblemente el aspecto más lucrativo de esta franquicia, el TCG es jugado en todo el mundo, pero mayormente en Norte América, Europa y Australia.
             </p>
-            <img src="img/TCG-LOGO.png" alt="LOGO DEL TCG DE YUGIOH">
+            <img src="../img/TCG-LOGO.png" alt="LOGO DEL TCG DE YUGIOH">
         </article>
         <article>
         <h2>¿En qué consiste?</h2>
@@ -63,7 +63,7 @@
             <p>El reglamento de juego de cartas Yu-Gi-Oh! son una serie de reglas que se deben seguir durante el juego contra uno o más adversarios, y la estructura y creación de un Deck de cartas para jugar.</p>
             <p>Las Reglas Básicas del Reglamento rigen el juego y se cumplen siempre y cuando el efecto de una Carta Mágica, Monstruo de efecto o Carta de trampa no diga lo contrario.
                 En el caso de que el efecto de una carta entre en conflicto con alguna regla, el propio Reglamento dicta que el efecto de la carta tiene prioridad. El Yu-Gi-Oh! Trading Card Game es un juego muy dinámico y gran parte de su éxito se debe a esa cualidad, en la que existen efectos para "romper" sus propias reglas en beneficio del jugador.</p>
-            <img src="img/CARTAS/page_1.jpg" alt="Carátula del Reglamento de Yugioh">
+            <img src="../img/CARTAS/page_1.jpg" alt="Carátula del Reglamento de Yugioh">
         </article>   
     </main>
     <footer>
