--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <img class="menuicn" src="./img/Hamburger_icon.svg" alt="Ícono Hamburguesa">
             </label>
             <ul>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./anime.html">Anime</a></li>
-                <li><a href="./cartas.html">Cartas</a></li>
-                <li><a href="./juegos.html">Juegos</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="/pages/anime.html">Anime</a></li>
+                <li><a href="/pages/cartas.html">Cartas</a></li>
+                <li><a href="/pages/juegos.html">Juegos</a></li>
             </ul>
         </nav>
     </header>
@@ -27,18 +27,26 @@
         <div class="container">
             <h1>¡Bienvenido a Aprende YuGiOh!</h1>
             <section id="intro">
-                <article>
-                    <h2>¿Qué es YuGiOh?</h2>
-                    <p>Yu-Gi-Oh! (遊☆戯☆王 Yūgiō, traducido del japonés "Rey de los Juegos") es una popular franquicia de manga y anime japonés creada por Kazuki Takahashi que involucra principalmente a personajes que juegan un juego de cartas llamado Duelo de Monstruos (Duel Monsters) donde cada jugador armaba un Deck (baraja) de Cartas de Monstruos, Cartas Mágicas y Cartas de Trampas para derrotar a su adversario.
-                    Comenzó como un manga en Japón en 1996. La franquicia de Yu-Gi-Oh! ha tenido un inmenso éxito a nivel global, originando varias series de anime. En la vida real se lanzaron las cartas del anime y existen videojuegos, juguetes y muchos otros productos.
-                    El universo de Yu-Gi-Oh! se compone del juego de cartas intercambiables, series de manga y anime, películas y numerosos videojuegos, entre otros.</p>
-                    <img src="img/Logo_Yu-Gi-Oh.png" alt="Logo Oficial de Yu-Gi-Oh"> 
+                <article class="c-i">
+                    <div class="c-a">
+                        <h2>¿Qué es YuGiOh?</h2>
+                        <p>Yu-Gi-Oh! (遊☆戯☆王 Yūgiō, traducido del japonés "Rey de los Juegos") es una popular franquicia de manga y anime japonés creada por Kazuki Takahashi que involucra principalmente a personajes que juegan un juego de cartas llamado Duelo de Monstruos (Duel Monsters) donde cada jugador armaba un Deck (baraja) de Cartas de Monstruos, Cartas Mágicas y Cartas de Trampas para derrotar a su adversario.
+                        Comenzó como un manga en Japón en 1996. La franquicia de Yu-Gi-Oh! ha tenido un inmenso éxito a nivel global, originando varias series de anime. En la vida real se lanzaron las cartas del anime y existen videojuegos, juguetes y muchos otros productos.
+                        El universo de Yu-Gi-Oh! se compone del juego de cartas intercambiables, series de manga y anime, películas y numerosos videojuegos, entre otros.</p>
+                    </div>
+                    <div class="c-b">
+                        <img src="img/Logo_Yu-Gi-Oh.png" alt="Logo Oficial de Yu-Gi-Oh">
+                    </div>
                 </article>
                 <hr>
-                <article>
-                    <h2>¿Qué es Aprende YuGiOh?</h2>
-                    <p>Aprende Yu-Gi-Oh! es un proyecto realizado sin fines de lucro, el cual tiene el propósito no solo de enseñar lo básico acerca del juego de cartas intercambiables (Trading Card Game o TCG) de Yu-Gi-Oh! sino que también de promocionarlo con aquel público que tal vez nunca le dió una oportunidad, o aquellos que deseen introducirse en este mundo. No solo se hablará del TCG sino que también de los otros aspectos de la franquicia de Yu-Gi-Oh!</p>
-                    <img src="img/logo.png" alt="Logo de Aprende Yu-Gi-Oh por Dante Cardoso">
+                <article class="c-i">
+                    <div class="c-a">
+                        <img src="img/logo.png" alt="Logo de Aprende Yu-Gi-Oh por Dante Cardoso">
+                    </div>
+                    <div class="c-b">
+                        <h2>¿Qué es Aprende YuGiOh?</h2>
+                        <p>Aprende Yu-Gi-Oh! es un proyecto realizado sin fines de lucro, el cual tiene el propósito no solo de enseñar lo básico acerca del juego de cartas intercambiables (Trading Card Game o TCG) de Yu-Gi-Oh! sino que también de promocionarlo con aquel público que tal vez nunca le dió una oportunidad, o aquellos que deseen introducirse en este mundo. No solo se hablará del TCG sino que también de los otros aspectos de la franquicia de Yu-Gi-Oh!</p>
+                    </div>
                 </article>
             </section>
             <hr>
