Arreglé un bug en el nav del index

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
                 <!--LA IDEA ACÁ ES HACER UNA GRILLA QUE PUEDA achicarse dependiendo de la resolución del dispositivo, adaptándose a este. -->
                 <div class="img-nav">
                     <div class="nav-box">
-                        <a href="anime.html">
+                        <a href="./pages/anime.html">
                             <img src="img/navmenu/(1)Anime.png" alt="Anime">
                         </a>
                     </div>
                     <div class="nav-box">
-                        <a href="cartas.html">
+                        <a href="./pages/cartas.html">
                             <img src="img/navmenu/(2)TCG.png" alt="Trading Card Game (TCG)">
                         </a>
                     </div>
                     <div class="nav-box">
-                        <a href="juegos.html">
+                        <a href="./pages/juegos.html">
                             <img src="img/navmenu/(3)Juegos.png" alt="Juegos de Yu-Gi-Oh">
                         </a>
                     </div>
