Arreglé otro bug del nav El nav en index daba problemas pero ya está listo para usarse.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             </label>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="/pages/anime.html">Anime</a></li>
-                <li><a href="/pages/cartas.html">Cartas</a></li>
-                <li><a href="/pages/juegos.html">Juegos</a></li>
+                <li><a href="./pages/anime.html">Anime</a></li>
+                <li><a href="./pages/cartas.html">Cartas</a></li>
+                <li><a href="./pages/juegos.html">Juegos</a></li>
             </ul>
         </nav>
     </header>
