Terminando el css Se creo la class responsive-img, que centra las imagenes. anime.html está completamente terminada.

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                         El universo de Yu-Gi-Oh! se compone del juego de cartas intercambiables, series de manga y anime, películas y numerosos videojuegos, entre otros.</p>
                     </div>
                     <div class="c-b">
-                        <img src="img/Logo_Yu-Gi-Oh.png" alt="Logo Oficial de Yu-Gi-Oh">
+                        <img src="img/Logo_Yu-Gi-Oh.png" class="responsive-img" alt="Logo Oficial de Yu-Gi-Oh">
                     </div>
                 </article>
                 <hr>
                 <article class="c-i">
                     <div class="c-a">
-                        <img src="img/logo.png" alt="Logo de Aprende Yu-Gi-Oh por Dante Cardoso">
+                        <img src="img/logo.png" class="responsive-img" alt="Logo de Aprende Yu-Gi-Oh por Dante Cardoso">
                     </div>
                     <div class="c-b">
                         <h2>¿Qué es Aprende YuGiOh?</h2>
