--- a/pages/anime.html
+++ b/pages/anime.html
@@ -30,7 +30,7 @@
             <p>A lo largo de los años se realizaron diversas series del universo Yu-Gi-Oh, centradas en un juego de cartas muy peculiar, el <strong>Duelo de Monstruos</strong>. A través de estas series seguimos las aventuras de diversos <strong>duelistas</strong> y observamos sus partidas. Cada serie implica un "salto generacional", una nueva mecánica en el juego de cartas, actualización de reglas de juego, etcétera. Acompañame a ver la diversa variedad de series de esta franquicia:</p>
             <hr>
             <article id="TOEI" class="c-i">
-                <div class="c-a"><img src="../img/ANIME/1-S0.jpg" alt="Poster de YUGIOH por Toei Animation"></div>
+                <div class="c-a"><img src="../img/ANIME/1-S0.jpg" class="responsive-img" alt="Poster de YUGIOH por Toei Animation"></div>
                 <div class="c-b">
                     <h2>Yu-Gi-Oh! Toei</h2>
                     <p>También conocida como "La Temporada Cero", Yu-Gi-Oh! es el título de la primera serie del anime basada en el manga Yu-Gi-Oh! emitida por TV Asahi. Esta serie anime está basada en los primeros siete tomos del manga original creado por Kazuki Takahashi en 1996, publicado por primera vez en la revista Shōnen Jump. Sin llegar a tener mucha trascendencia, finalizó después de la primera y única temporada de 27 episodios.</p>
@@ -46,11 +46,11 @@
                     <p>Posiblemente la más popular de todas, Yu-Gi-Oh! Duelo de Monstruos es el título de la primera serie del anime basada en el manga Yu-Gi-Oh! realizada por Nihon Ad Systems (NAS). Fue nombrada de esta manera para diferenciarla de la anterior serie y por enfocarse en los nuevos arcos argumentales donde el juego Duelo de Monstruos formaba parte central del argumento. La serie fue conocida internacionalmente simplemente como Yu-Gi-Oh!.</p>
                     <p>Comparte elenco con la serie anterior, Yugi y el Faraón ocupando el lugar de protagonistas. Esta vez, dedicados completamente al Duelo de Monstruos, se dedican a averiguar de dónde viene el Faraón, y su verdadero nombre.</p>
                 </div>
-                <div class="c-b"><img src="../img/ANIME/2-DM.jpg" alt="Imagen promocional de Yugioh Duel Monsters"></div>
+                <div class="c-b"><img src="../img/ANIME/2-DM.jpg" class="responsive-img" alt="Imagen promocional de Yugioh Duel Monsters"></div>
             </article>
             <hr>
             <article id="GX" class="c-i">
-                <div class="c-a"><img src="../img/ANIME/3-GX.png" alt="Imagen referencial de Yugioh GX"></div>
+                <div class="c-a"><img src="../img/ANIME/3-GX.png"  class="responsive-img" alt="Imagen referencial de Yugioh GX"></div>
                 <div class="c-b">
                     <h2>Yu-Gi-Oh! GX</h2>
                     <p>Yu-Gi-Oh! GX, llamada originalmente en Japón como Yu-Gi-Oh! Duelo de Monstruos GX (Yu-Gi-Oh! Duel Monsters GX) es la serie anime sucesor de la franquicia de Yu-Gi-Oh! original. Producida por NAS, Yu-Gi-Oh! GX empezó a emitirse en TV Tokyo en Japón el día 6 de octubre de 2004. Al igual que la serie anime anterior, fue licenciada por 4Kids Entertainment para su distribución en occidente. Aunque nunca se emitió su última temporada fuera de Japón.</p>
@@ -65,11 +65,11 @@
                     </p>
                     <p>Yu-Gi-Oh! 5D's se desarrolla en la Ciudad de Nueva Domino algún tiempo después de los hechos relativos a Yugi Muto y Jaden Yuki. Una nueva forma de Duelo, los Turbo Duelos, (Riding Duels) tiene lugar en motocicletas llamadas Duel Runners.</p>
                 </div>
-                <div class="c-b"><img src="../img/ANIME/4-5Ds.jpg" alt="Imagen promocional de Yugioh 5DS"></div>
+                <div class="c-b"><img src="../img/ANIME/4-5Ds.jpg" class="responsive-img" alt="Imagen promocional de Yugioh 5DS"></div>
             </article>
             <hr>
             <article id="ZEXAL" class="c-i">
-                <div class="c-a"><img src="../img/ANIME/5-ZEXAL.png" alt="Imagen Promocional de Yugioh ZEXAL"></div>
+                <div class="c-a"><img src="../img/ANIME/5-ZEXAL.png" class="responsive-img" alt="Imagen Promocional de Yugioh ZEXAL"></div>
                 <div class="c-b">
                     <h2>Yu-Gi-Oh! ZEXAL</h2>
                     <p>Yu-Gi-Oh! ZEXAL fue la cuarta entrega del anime Yu-Gi-Oh!. Comenzó a emitirse en Japón el día 11 de abril del 2011 y finalizó el día 23 de marzo del 2014 en el canal TV Tokyo, como sucesora de Yu-Gi-Oh! 5D's y predecesora de Yu-Gi-Oh! ARC-V, introduciendo la Invocación XYZ y la mecánica de los Monstruos XYZ.</p>
@@ -84,12 +84,12 @@
                     <p>Esta nueva serie introduce a los Monstruos de Péndulo y hace estreno de las nuevas reglas de Duelo, como que el primer jugador no podrá robar en su primer turno. Esta nueva entrega se caracteriza por reunir por primera vez todos los tipos de Invocación en una misma serie</p>
                 </div>
                 <div class="c-b">
-                <img src="../img/ANIME/6-ARCV.jpg" alt="Poster de Yugioh ARC-V">
+                <img src="../img/ANIME/6-ARCV.jpg" class="responsive-img" alt="Poster de Yugioh ARC-V">
                 </div>
             </article>
             <hr>
             <article id="VRAINS" class="c-i">
-                <div class="c-a"><img src="../img/ANIME/7-VRAINS.jpg" alt="Poster de Yugioh VRAINS"></div>
+                <div class="c-a"><img src="../img/ANIME/7-VRAINS.jpg" class="responsive-img" alt="Poster de Yugioh VRAINS"></div>
                 <div class="c-b">
                     <h2>Yu-Gi-Oh! VRAINS</h2>
                     <p>Yu-Gi-Oh! VRAINS es la sexta entrega del anime Yu-Gi-Oh!, sucesora de Yu-Gi-Oh! ARC-V. Comenzó a emitirse en Japón el día 10 de mayo de 2017 y finalizó el día 25 de septiembre de 2019 en el canal TV Tokyo. Introduce un nuevo tipo de monstruo llamado Ciberso, acompañado con un tipo de Invocación llamada Invocación por Enlace y la mecánica de otro tipo de monstruo que pertenece en el Deck Extra, los Monstruos de Enlace (Link).</p>
@@ -101,7 +101,7 @@
                     <h2>Yu-Gi-Oh! SEVENS</h2>
                     <p>Yu-Gi-Oh! SEVENS es la séptima entrega del anime Yu-Gi-Oh!, sucesora de Yu-Gi-Oh! VRAINS. Comenzó a emitirse en Japón el 4 abril de 2020 en el canal TV Tokyo. A diferencia de sus predescesoras, animadas por Studio Gallop, el estudio que está a cargo de su animación es Bridge. Además, no introduce un método de Invocación o un tipo de monstruo, sino un tipo de Duelo, “Rush Duel”.</p>
                 </div>
-                <div class="c-b"><img src="../img/ANIME/8-SEVENS.jpg" alt="Poster de Yugioh SEVENS"></div>
+                <div class="c-b"><img src="../img/ANIME/8-SEVENS.jpg" class="responsive-img" alt="Poster de Yugioh SEVENS"></div>
             </article>
         </section> 
     </main>
